--- a/css/SettingsPage.css
+++ b/css/SettingsPage.css
@@ -1,11 +1,13 @@
 
 .SettingsTable
 {
-	float: center;
 	text-align: left;
 	background-color: #dddddd;
-    margin-left: auto; 
-    margin-right: auto;
+	
+	margin-left: auto; 
+	margin-right: auto;
+	float: center;
+	
 }
 
 .SettingsTable tr
@@ -33,14 +35,16 @@
 
 .SettingsButton
 {
-	float: center;
 	text-align: left;
 	background-color: #dddddd;
 	padding: 10px;
 	font-size: 20px;
-    margin-left: auto; 
-    margin-right: auto;
 	color: #000000;
+	/*
+	margin-left: auto; 
+	margin-right: auto;
+	float: center;
+	*/
 }
 
 .SettingsButton:hover
